# battlebox

./: .env  .gitignore  CasualBattleBox.txt  README.md  pyproject.toml
src/: build.py  decks.py  load.py  main.py  read.py  separate.py  shuffle.py  write.py
tests/: test_build_decks_function.py  test_load_function.py  test_separate_function.py  test_shuffle_split_function.py
