[project]
name = "battlebox"
version = "0.1.0"
description = "A program to prepare two-player digital mtg battlebox decks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
